@@ -1,3 +1,8 @@
+Thu May 20 15:59:14 2010  Kouhei Sutou  <kou@cozmixng.org>
+
+	* lib/rss/maker/base.rb, test/rss/test_maker_0.9.rb:
+	accept any time format in maker. [ruby-core:26923]
+
 Thu May 20 15:54:08 2010  Akinori MUSHA  <knu@iDaemons.org>
 
 	* eval.c (recursive_push): Taint internal hash to prevent
